<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.xiangxu.vrvideo.viewer.fragment.MineFragment">

    <include layout="@layout/layout_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- header account -->
            <LinearLayout
                android:id="@+id/user_account_layout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_avatar_img"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:src="@drawable/default_avatar_l"
                    app:civ_border_width="0dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:id="@+id/user_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:textColor="@color/md_white_1000"
                        android:textSize="20sp"
                        android:text="xuxiang"/>
                    <TextView
                        android:id="@+id/user_phone_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableLeft="@drawable/ic_phone_android"
                        android:gravity="left|center"
                        android:textColor="@color/md_white_1000"
                        android:text="188****9319" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/user_account_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_hardware_keyboard_arrow_right"/>

            </LinearLayout>

            <!-- body items -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_grey_100"
                android:orientation="vertical">

                <View
                    style="@style/SplitLineStyle"
                    android:layout_marginTop="20dp"/>
                <TextView
                    android:id="@+id/places_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_maps_place"
                    android:text="@string/places_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>
                <TextView
                    android:id="@+id/collects_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_action_favorite"
                    android:text="@string/collects_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>

                <View style="@style/SplitLineStyle"
                      android:layout_marginTop="20dp"/>
                <TextView
                    android:id="@+id/settings_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_action_settings"
                    android:text="@string/setting_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>

                <View style="@style/SplitLineStyle"
                      android:layout_marginTop="20dp"/>
                <TextView
                    android:id="@+id/about_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_action_info_outline"
                    android:text="@string/about_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>
                <TextView
                    android:id="@+id/feedback_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_content_send"
                    android:text="@string/feedback_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>
                <TextView
                    android:id="@+id/commend_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_action_thumb_up"
                    android:text="@string/commend_item_fragment_mine" />
                <View style="@style/SplitLineStyle"/>
                <TextView
                    android:id="@+id/share_item"
                    style="@style/MineItemStyle"
                    android:drawableLeft="@drawable/ic_social_share"
                    android:text="@string/share_item_fragment_mine" />
                <View style="@style/SplitLineStyle"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>