<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:layout_marginTop="3dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="1dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_video_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="1"
            android:text="@string/title_video_list_item"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/preview_video_list_item"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/preview_description_video_list_item"
            android:src="@drawable/demo_video_preview"/>

        <TextView
            android:id="@+id/description_video_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:maxLines="3"
            android:textColor="@color/text_secondary"
            android:text="@string/description_video_list_item"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/favors_video_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_Tertiary"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/comments_video_list_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_Tertiary"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>